--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,10 @@
 /*  your css code here. If applicable */
+body{
+	background-color:#f5f5f5;
+}
+.box{
+	background-color:white;
+}
+p{
+	text-align:end;
+}
